--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "lodash.groupby": "^4.6.0",
-    "moment": "^2.30.1"
+    "moment": "^2.30.1",
+    "sequelize": "^6.37.3",
+    "sqlite3": "^5.1.7"
   }
 }
